# arithemtic_expression

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  arithmetic_operator.cpp  arithmetic_operator.hpp  expression_evaluator.cpp  expression_evaluator.hpp  expression_parser.cpp  expression_parser.hpp  main.cpp  simple_custom_variant.cpp  simple_custom_variant.hpp  syntax_tree.cpp  syntax_tree.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  complex_expression.cpp  expression.cpp  invalid_input.cpp  operators_priority.cpp  parentheses.cpp  shared.hpp  test_main.cpp
